--- a/package.json
+++ b/package.json
@@ -33,6 +33,10 @@
 		"url": "https://github.com/masterd2020/math.git"
 	},
 	"devDependencies": {
+		"@semantic-release/changelog": "^6.0.3",
+		"@semantic-release/commit-analyzer": "^11.0.0",
+		"@semantic-release/npm": "^11.0.0",
+		"@semantic-release/release-notes-generator": "^12.0.0",
 		"cz-conventional-changelog": "^3.3.0",
 		"eslint": "^8.49.0",
 		"eslint-config-prettier": "^9.0.0",
