--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
 		"url": "https://github.com/masterd2020/math",
 		"email": "tohebayomide11@gmail.com"
 	},
+	"private": false,
 	"repository": {
 		"type": "git",
 		"url": "https://github.com/masterd2020/math.git"
