--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
 	"name": "@tmasterd/math",
 	"version": "0.0.0-development",
 	"description": "",
-	"main": "index.js",
+	"main": "main.js",
 	"scripts": {
 		"test": "jest",
 		"lint": "npx eslint",
