--- a/.github/workflows/pull-request.yml
+++ b/.github/workflows/pull-request.yml
@@ -6,19 +6,18 @@ on:
 
 jobs:
     build:
+        name: Build For PR
         runs-on: ubuntu-latest
 
-        strategy:
-            matrix:
-                node-version: [18.x]
-
         steps:
-            - uses: actions/checkout@v3
-            - name: Use Node.js ${{ matrix.node-version }}
+            - name: Checkout
+              uses: actions/checkout@v3
+
+            - name: Setup Node.js
               uses: actions/setup-node@v3
+
               with:
-                  node-version: ${{ matrix.node-version }}
-                  cache: 'npm'
+                  node-version: 18.x
 
             - name: Install dependencies
               run: npm install
